Added image scaling

--- a/faceRecognitionTraining.ipynb
+++ b/faceRecognitionTraining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\1.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\2.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\3.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\4.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\5.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\6.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Antonellu\\7.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\3.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\4.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\5.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\6.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\7.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\8.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Delilah\\9.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\10.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\11.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\12.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\2.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\3.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\4.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\5.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\6.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\7.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\8.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Emi\\9.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\1.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\2.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\3.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\4.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\5.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\6.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Gianpi\\7.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Madre\\1.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Madre\\2.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Madre\\3.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Madre\\4.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Madre\\5.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Madre\\6.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\1.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\2.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\3.JPG\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\4.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\5.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\6.jpg\n",
+      "D:\\Users\\emast\\Python\\Notebooks\\OpenCV\\Images\\Vito\\7.jpg\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
    "source": [
     "face_cascade = cv2.CascadeClassifier('cascades/data/haarcascade_frontalface_alt2.xml')\n",
     "\n",
@@ -53,10 +106,10 @@
     "            \n",
     "            # path of each photo\n",
     "            path = os.path.join(root,file)\n",
-    "            \n",
+    "            print(path)\n",
     "            # get names folders\n",
     "            label = os.path.basename(os.path.dirname(path))\n",
-    "            \n",
+    "#             print(label)\n",
     "            if not label in label_ids:\n",
     "                label_ids[label] = current_id\n",
     "                current_id +=1\n",
@@ -69,7 +122,13 @@
     "            # verify this image, tune into NUMPY array\n",
     "            # turn image gray\n",
     "            pil_image = Image.open(path).convert(\"L\") # grayscale\n",
-    "            image_array = np.array(pil_image,\"uint8\") # make into array\n",
+    "            \n",
+    "            # resize images\n",
+    "            size = (550,550)\n",
+    "            \n",
+    "            final_image = pil_image.resize(size, Image.ANTIALIAS)\n",
+    "            \n",
+    "            image_array = np.array(final_image,\"uint8\") # make into array\n",
     "            \n",
     "#             print(image_array)\n",
     "            faces = face_cascade.detectMultiScale(image_array, scaleFactor =1.1, minNeighbors =5)\n",
@@ -85,7 +144,9 @@
     "    pickle.dump(label_ids,f)\n",
     "    \n",
     "recognizer.train(x_train,np.array(y_labels))\n",
-    "recognizer.save(\"trainner.yml\")"
+    "recognizer.save(\"trainner.yml\")\n",
+    "\n",
+    "print('Finished Training')"
    ]
   }
  ],
